# backend-rs

./: .gitignore  .gitmodules  Cargo.toml
assets/: atolls.csv  islands.csv  prayertimes.csv
src/: main.rs
src/lib/: log.rs  mod.rs  parser.rs  prayer.rs  utils.rs
